--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -6,9 +6,11 @@
     android:fitsSystemWindows="true">
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="140dp"
-        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="240dp"
         android:contentDescription="@string/app_name"
         android:scaleType="centerInside"
         android:src="@mipmap/bijou" />
