--- a/app/src/main/res/layout/bookmark_item.xml
+++ b/app/src/main/res/layout/bookmark_item.xml
@@ -1,51 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/web_page_item"
+    android:id="@+id/bookmark_item"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
     android:orientation="horizontal"
-    android:paddingStart="20dp"
+    android:paddingStart="26dp"
     android:paddingEnd="20dp">
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         android:layout_weight="1">
 
         <TextView
-            android:id="@+id/web_page_id_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:gravity="start|center_vertical"
-            android:lines="1"
-            android:minWidth="22dp"
-            android:textColor="@color/colorTextPrimary"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/web_page_title_text"
+            android:id="@+id/bookmark_title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="14dp"
-            android:layout_toEndOf="@id/web_page_id_text"
             android:lines="1"
             android:textColor="@color/colorTextPrimary"
             android:textSize="18sp"
             tools:ignore="RelativeOverlap" />
 
         <TextView
-            android:id="@+id/web_page_site_text"
+            android:id="@+id/bookmark_site_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="14dp"
-            android:layout_toEndOf="@id/web_page_id_text"
+            android:layout_below="@id/bookmark_title_text"
+            android:layout_alignParentStart="true"
             android:lines="1"
             android:textColor="@color/colorTextAuxiliary"
             android:textSize="16sp" />
@@ -53,10 +39,10 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/web_page_delete_button"
+        android:id="@+id/bookmark_edit_button"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_gravity="center"
-        android:background="@drawable/delete" />
+        android:background="@drawable/edit" />
 
 </LinearLayout>
