--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -6,7 +6,9 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp">
 
     <RelativeLayout
         android:layout_width="0dp"
@@ -15,13 +17,15 @@
 
         <TextView
             android:id="@+id/history_id_text"
-            android:layout_width="24dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:gravity="center"
+            android:gravity="start|center_vertical"
+            android:lines="1"
+            android:minWidth="26dp"
             android:textColor="@color/colorTextPrimary"
-            android:textSize="22sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/history_title_text"
