--- a/app/src/main/res/layout/layout_multiple.xml
+++ b/app/src/main/res/layout/layout_multiple.xml
@@ -36,9 +36,7 @@
         android:id="@+id/multiple_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp" />
+        android:layout_weight="1" />
 
     <RelativeLayout
         android:layout_width="match_parent"
