--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,8 @@
     <color name="colorAccent">#2196f3</color>
     <color name="colorWindowBackground">#ffffff</color>
     <color name="colorTextPrimary">#000000</color>
-    <color name="colorTextAuxiliary">#5F5F5F</color>
-    <color name="colorTextOther">#9E9E9E</color>
-    <color name="colorTextAnti">#FFFFFF</color>
+    <color name="colorTextAuxiliary">#5f5f5f</color>
+    <color name="colorTextOther">#9e9e9e</color>
+    <color name="colorTextAnti">#ffffff</color>
     <color name="colorTransparent">#00000000</color>
 </resources>
