--- a/app/src/main/res/layout/bookmark_item.xml
+++ b/app/src/main/res/layout/bookmark_item.xml
@@ -13,7 +13,6 @@
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
         android:layout_weight="1">
 
         <TextView
@@ -43,6 +42,7 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_gravity="center"
+        android:layout_marginStart="10dp"
         android:background="@drawable/edit" />
 
 </LinearLayout>
