--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/history_"
+            android:text="@string/history"
             android:textColor="@color/colorTextPrimary"
             android:textSize="22sp" />
 
