--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,52 +37,52 @@
                         android:layout_alignParentTop="true"
                         android:visibility="visible">
 
-                        <Button
-                            android:id="@+id/menu_button"
-                            android:layout_width="26dp"
-                            android:layout_height="26dp"
-                            android:layout_alignParentStart="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="20dp"
-                            android:background="@drawable/menu" />
-
-                        <EditText
-                            android:id="@+id/toolbar_edit"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginStart="20dp"
-                            android:layout_toEndOf="@id/menu_button"
-                            android:background="@color/colorTransparent"
-                            android:hint="@string/search_hint"
-                            android:imeOptions="actionGo"
-                            android:inputType="text"
-                            android:lines="1"
-                            android:maxWidth="210dp"
-                            android:minWidth="150dp"
-                            android:textColor="@color/colorTextPrimary"
-                            android:textColorHint="@color/colorTextOther"
-                            android:textSize="18sp"
-                            tools:ignore="Autofill,RelativeOverlap" />
-
-                        <Button
-                            android:id="@+id/go_button"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_centerVertical="true"
                             android:layout_marginEnd="20dp"
-                            android:layout_toStartOf="@id/multiple_button"
-                            android:background="@drawable/forward"
-                            android:visibility="gone" />
+                            android:orientation="horizontal">
 
-                        <Button
-                            android:id="@+id/multiple_button"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginEnd="20dp"
-                            android:background="@drawable/multiple" />
+                            <Button
+                                android:id="@+id/menu_button"
+                                android:layout_width="26dp"
+                                android:layout_height="26dp"
+                                android:background="@drawable/menu" />
+
+                            <EditText
+                                android:id="@+id/toolbar_edit"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="20dp"
+                                android:layout_weight="1"
+                                android:background="@color/colorTransparent"
+                                android:hint="@string/search_hint"
+                                android:imeOptions="actionGo"
+                                android:importantForAutofill="no"
+                                android:inputType="text"
+                                android:lines="1"
+                                android:textColor="@color/colorTextPrimary"
+                                android:textColorHint="@color/colorTextOther"
+                                android:textSize="18sp" />
+
+                            <Button
+                                android:id="@+id/go_button"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_marginStart="20dp"
+                                android:background="@drawable/forward"
+                                android:visibility="gone" />
+
+                            <Button
+                                android:id="@+id/multiple_button"
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:layout_marginStart="20dp"
+                                android:background="@drawable/multiple" />
+
+                        </LinearLayout>
 
                         <ProgressBar
                             android:id="@+id/progress_bar"
@@ -96,12 +95,13 @@
 
                     </RelativeLayout>
 
-                    <RelativeLayout
+                    <LinearLayout
                         android:id="@+id/find_layout"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
                         android:background="@color/colorWindowBackground"
                         android:visibility="gone">
 
@@ -109,49 +109,39 @@
                             android:id="@+id/cancel_find_button"
                             android:layout_width="26dp"
                             android:layout_height="26dp"
-                            android:layout_alignParentStart="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="20dp"
                             android:background="@drawable/delete" />
 
                         <EditText
                             android:id="@+id/find_edit"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
                             android:layout_marginStart="20dp"
-                            android:layout_toEndOf="@id/cancel_find_button"
+                            android:layout_weight="1"
                             android:background="@color/colorTransparent"
                             android:hint="@string/find_hint"
                             android:imeOptions="actionSearch"
+                            android:importantForAutofill="no"
                             android:inputType="text"
                             android:lines="1"
-                            android:maxWidth="210dp"
-                            android:minWidth="150dp"
                             android:textColor="@color/colorTextPrimary"
                             android:textColorHint="@color/colorTextOther"
-                            android:textSize="18sp"
-                            tools:ignore="Autofill,RelativeOverlap" />
+                            android:textSize="18sp" />
 
                         <Button
                             android:id="@+id/find_back_button"
                             android:layout_width="26dp"
                             android:layout_height="26dp"
-                            android:layout_centerVertical="true"
-                            android:layout_marginEnd="20dp"
-                            android:layout_toStartOf="@id/find_next_button"
+                            android:layout_marginStart="20dp"
                             android:background="@drawable/back" />
 
                         <Button
                             android:id="@+id/find_next_button"
                             android:layout_width="26dp"
                             android:layout_height="26dp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginEnd="20dp"
+                            android:layout_marginStart="20dp"
                             android:background="@drawable/forward" />
 
-                    </RelativeLayout>
+                    </LinearLayout>
 
                 </RelativeLayout>
 
